# Project_doodle_jump

./: .clang-format  CMakeLists.txt  README.md  build.sh  run.sh
doxygen/: Doxyfile
doxygen/html/: SFMLbg__tile_8h_source.html  SFMLbonus_8h_source.html  SFMLentity_8h_source.html  SFMLhorizontalPlatform_8h_source.html  SFMLjetpack_8h_source.html  SFMLplatform_8h_source.html  SFMLplayer_8h_source.html  SFMLspring_8h_source.html  SFMLstaticPlatform_8h_source.html  SFMLtemporaryPlatform_8h_source.html  SFMLverticalPlatform_8h_source.html  abstractFactory_8h_source.html  annotated.html  bg__tile_8h_source.html  bonus_8h_source.html  camera_8h_source.html  classDoodleJump_1_1AbstractFactory-members.html  classDoodleJump_1_1AbstractFactory.html  classDoodleJump_1_1AbstractFactory__inherit__graph.map  classDoodleJump_1_1AbstractFactory__inherit__graph.md5  classDoodleJump_1_1Bonus-members.html  (+202 more)
src/: CMakeLists.txt  main.cpp
src/SFML_graphics_library/include/: SFMLbg_tile.h  SFMLentity.h  SFMLplayer.h  concreteFactory.h  entity.h  game.h  player.h
src/SFML_graphics_library/include/bonus/: SFMLbonus.h  SFMLjetpack.h  SFMLspring.h
src/SFML_graphics_library/src/: SFMLbg_tile.cpp  SFMLentity.cpp  SFMLplayer.cpp  concreteFactory.cpp  entity.cpp  game.cpp  player.cpp
src/SFML_graphics_library/src/bonus/: SFMLbonus.cpp  SFMLjetpack.cpp  SFMLspring.cpp
src/logic_library/include/: abstractFactory.h  bg_tile.h  camera.h  entity.h  player.h  random.h  score.h  stopwatch.h  world.h
src/logic_library/include/bonus/: bonus.h  jetpack.h  spring.h
src/logic_library/include/command_pattern/: collisionBonusPlayer.h  command.h
src/logic_library/include/observer_pattern/: observable.h  observer.h
src/logic_library/src/: bg_tile.cpp  camera.cpp  entity.cpp  player.cpp  random.cpp  score.cpp  stopwatch.cpp  world.cpp
src/logic_library/src/bonus/: bonus.cpp  jetpack.cpp  spring.cpp
src/logic_library/src/command_pattern/: collisionBonusPlayer.cpp
src/logic_library/src/observer_pattern/: observable.cpp
(+123 files in other folders)
